@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.32 2013/09/10 20:13:26 nanard Exp $
+$Id: Changelog.txt,v 1.33 2013/11/26 08:47:36 nanard Exp $
+
+2013/11/26:
+  enforce strict aliasing rules.
 
 2013/09/10:
   small patch for MSVC >= 16
